Challenge 170 - Contact Card/css/styles.css
body {
  font-family: "Open Sans", sans-serif;
  line-height: 1.5;
  display: flex;
  height: 100dvh;
  justify-content: center;
  align-items: center;
  background-color: rgb(242, 246, 255);
}

.wrapper {
  background-color: rgb(247, 250, 255);
  padding: 4rem;
}

.card {
  display: grid;
  max-width: 400px;
  grid-template-columns: 1.75em 1fr 1.75em;
  grid-template-rows: auto 70px auto;
}

.card-upper {
  background: linear-gradient(150deg, rgba(94, 160, 254, 1) 10%, rgba(148, 107, 229, 1) 90%);
  color: white;
  border-radius: 1rem;
  grid-column: 1 / 4;
  grid-row: 1 / 3;
  text-align: center;
  padding-inline: 2rem;
}

.card-upper h2 {
  font-weight: 300;
  padding-block: 2rem;
}

.card-upper p {
  font-weight: 300;
  padding-bottom: 7rem;
}

.card-lower {
  background-color: white;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
  grid-column: 2 / 3;
  grid-row: 2 / 4;
  padding-inline: 5rem;
  padding-block: 2rem;
  border-radius: 0.5rem;
  text-align: center;
}

.card-lower h2 {
  font-weight: 500;
  margin-bottom: 2rem;
}

.card-lower p {
  font-weight: 500;
  margin-bottom: 10px;
}

.card-lower img {
  width: 100px;
  height: 100px;
  margin-inline: auto;
  border-radius: 50%;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
}

.card-lower .status {
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.4);
  margin-inline: auto;
  font-size: 0.8rem;
  padding-block: 0.2rem;
  padding-right: 0.8rem;
  padding-left: 0.8rem;
  margin-bottom: 2rem;
  background-color: white;
  width: fit-content;
  border-radius: 500px;
  display: flex;
  align-items: center;
}

.card-lower .status::before {
  content: "";
  width: 10px;
  height: 10px;
  margin-right: 1rem;
  /* background-color: rgb(142, 219, 62); */
  background-color: rgb(219, 62, 62);
  border-radius: 50%;
}

.card-lower .button {
  display: block;
  position: relative;
  font-weight: 300;
  margin-block: 1rem;
  padding-inline: 1.5rem;
  padding-block: 1rem;
  background-image: linear-gradient(to bottom right, rgba(94, 160, 254, 1) 10%, rgba(148, 107, 229, 1) 90%);
  color: white;
  text-decoration: none;
  border-radius: 0.4rem;
  z-index: 1;
  transition: all 200ms ease-in-out;
}

.card-lower .button::before {
  position: absolute;
  content: "";
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(to top left, rgba(94, 160, 254, 1) 10%, rgba(148, 107, 229, 1) 90%);
  border-radius: 0.4rem;
  z-index: -1;
  transition: opacity 200ms ease-in-out;
  opacity: 0;
}

.card-lower .button:hover::before {
  opacity: 1;
}

.card-lower .button:hover {
  scale: 1.02;
  transform: translateY(-.3rem);
}

